--- a/Fabric/Fabric/appsettings.json
+++ b/Fabric/Fabric/appsettings.json
@@ -1,7 +1,7 @@
 
   {
     "ConnectionStrings": {
-      "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Fabric;Trusted_Connection=True;"
+      "DefaultConnection": "Server=BAKHACOMP;Database=Eccomerce;Trusted_Connection=True;"
     },
     "Logging": {
       "LogLevel": {
